# EigenForward

./: CMakeLists.txt  README.md  eigenMLP.h  keras_to_np.py  main.cpp
apps/: CMakeLists.txt  main.cpp
cmake/: FindHighFive.cmake
include/eigenMLP/: kerasLoader.h  layer.h  model.h
spike/: readH5.py
src/: CMakeLists.txt  layer.cpp  model.cpp
